# hsds-transformer

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  ISSUE_122_IMPLEMENTATION_PLAN.md  Mapping Template.xlsx  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
.github/: CODEOWNERS  buddies.json
.github/workflows/: assign-buddy.yml  build.yml  deploy.yml  unit-tests.yml
api/: pyproject.toml
cli/: main.py  mapping.csv  pyproject.toml
cli/src/cli/: __init__.py
data/: HSD_provider.csv  main.py  models.py
data/HSD_example/: HSD_provider.csv  mapping.csv
data/custom_transform_manual_test/: organizations.csv  organizations_organization_mapping.csv
data/deprecated_hsds/: phones.csv  phones2.csv  phones_phone_mapping.csv  services_service_mapping.csv
data/deprecated_hsds_mapping/: locations_location_mapping.csv  organizations_organization_mapping.csv
data/deprecated_mapping/: locations_location_mapping.csv  organizations_organization_mapping.csv
data/florida_data/: locations.csv  locations_location_mapping.csv  organizations.csv  organizations_organization_mapping.csv  services.csv  services_service_mapping.csv
data/iCarol/: iCarolData.csv  iCarolData_organization_mapping.csv
data/iCarol2/: iCarolData.csv  iCarolData_organization_mapping.csv
data/iCarol3/: iCarolData1.csv  iCarolData1_organization_mapping.csv
data/json_test/: orgs.json  orgs_organization_mapping.json
data/logger_test/: locations.csv  locations_location_mapping.csv  (+2 more)
output/: organization_1.json  organization_240.json  organization_3.json  organization_35.json  organization_3703.json  organization_3721.json  organization_3787.json  organization_4063.json  organization_4137.json  organization_453.json
reverse_output/: locations.csv  organizations.csv  phones.csv  services.csv
src/: main.py  mapping.csv
src/lib/: buildcsv.py  collections.py  mapper.py  models.py  parser.py  pyproject.toml  relations.py  testbuildcsv.py  transforms_loader.py
src/lib/custom_transform/: custom_transform_error.py  transforms_loader.py
src/lib/generate_mapping/: __init__.py  generator.py  writer.py
src/lib/maintenance/: generate_relations.py  parse_json.py
src/lib/maintenance/generate_mapping/: generator.py  writer.py
src/lib/mapping_template/: generator.py
src/lib/reverse_transform/: buildcsv.py  parser.py  process_rev_transform.py  reverse_transform.py  testbuildcsv.py
src/lib/tests/: test.py  test_transformer.py  testmapper.py
src/lib/transform/: collections.py  json_collections.py  logger.py  mapper.py  outputs.py  parser.py  relations.py  relationships.py
src/lib/transform/custom_transform/: custom_transform_error.py  custom_transforms.py  transforms_loader.py
tests/: test_api_tempdir.py  test_custom_transform.py  test_generate_mapping_cli.py  test_generate_relations_cli.py  test_json_collections.py  test_mapping_template_generator.py  test_parse_json.py  test_sanity_check.py  test_transformer.py
(+54 files in other folders)
