[project]
name = "hsds-transformer"
version = "0.1.0"
description = "Convert almost resource data into Human Services Data Specification (HSDS) compliant format."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glom==24.11.0",
    "click==8.2.1",
    "requests>=2.31,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
api = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
]


