[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stevens Blueprint" email = "blueprint@stevens.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
api = "api.src:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
