[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stevens Blueprint" email = "blueprint@stevens.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
]

[project.scripts]
cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
