[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stevens Blueprint", email = "blueprint@stevens.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "lib"
]

[project.scripts]
cli = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
