[project]
name = "lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stevens Blueprint", email = "blueprint@stevens.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.19.0",
    "pandas>=2.3.2",
]

[project.scripts]
lib = "lib.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
